--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body{
     padding: 6px;
     text-align: center;
     position: relative;
-    left: 43%;
+    left: 47%;
     top:344px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
 } 
@@ -34,4 +34,26 @@ body{
 }
 #highscores:hover{
     color: purple;
+}
+h1{
+    display: inline;
+   justify-content: center;
+   align-content: center;
+    margin: auto;
+    text-align: center;
+    position: relative;
+    left: 34%;
+    top:203px;
+    font-size: 50px;
+}
+p{
+    display: inline;
+   justify-content: center;
+   align-content: center;
+    margin: auto;
+    text-align: center;
+    position: absolute;
+    left: 34%;
+    top:299px;
+    font-size: 20px;
 }
