--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,8 @@ body{
     padding: 6px;
     text-align: center;
     position: relative;
-    left: 47%;
-    top:344px;
+    left: 42%;
+    top:333px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
 } 
 #start:hover {
@@ -42,8 +42,8 @@ h1{
     margin: auto;
     text-align: center;
     position: relative;
-    left: 34%;
-    top:203px;
+    left: 31%;
+    top:113px;
     font-size: 50px;
 }
 p{
@@ -53,7 +53,13 @@ p{
     margin: auto;
     text-align: center;
     position: absolute;
-    left: 34%;
+    left: 29%;
     top:299px;
     font-size: 20px;
+}
+h4{
+    position: absolute;
+    top: 17px;
+    display: inline;
+    right: 4%;
 }
